bad/bin_op_ne_string_class.example_compiler_output
ERROR
[1mbad/bin_op_ne_string_class.lat:5:5: [1;31merror: [0;1moperator != cannot compare values of types `string` and `Y` because values are not convertible to either of the two types[m
	"" != new Y;
	   [1;32m^[m
